# Machine-Learning-Operations

./: Profiling  README.md  data.py  model.ckpt  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.dvc/tmp/: lock
Machine-Learning-Operations/: pyproject.toml
Machine-Learning-Operations/Weekly_Exercises/S1/exercise_files/: 3_Training_Neural_Networks.ipynb
Machine-Learning-Operations/Weekly_Exercises/S1/final_exercise/: data.py
Machine-Learning-Operations/dockerfiles/: api.dockerfile  train.dockerfile
S1/exercise_files/: 1_Tensors_in_PyTorch.ipynb
S1/final_exercise/: data.py  main.py
S1/s1_development_environment/exercise_files/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb
S1/s1_development_environment/exercise_files/final_exercise/: data.py
Weekly_Exercises/S1/final_exercise/: main.py
Weekly_Exercises/S2/exercise_files/: greetings.py  iris_classifier.py
Weekly_Exercises/S3/exercise_files/: vae_mnist.py
Weekly_Exercises/S3/exercise_files/config/: config.yaml
Weekly_Exercises/S3/exercise_files/vae_solution/: vae_mnist.py
Weekly_Exercises/S4/exercise_files/: my_logger.py  vae_mnist_bugs.py
configs/: config.yaml
data/.dvc/: config
dockerfiles/: predict.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model_06-1427.pth  model_06-1439.pth  model_06-1501.pth  model_07-1027.pth  model_20250106_141157.pth
notebooks/: datatesting.ipynb
outputs/2025-01-07/12-03-53/.hydra/: hydra.yaml
src/mlops_grp69/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py
(+6 files in other folders)
